# model-dash

model-dashboard/: .dockerignore  Dockerfile  requirements.txt
model-dashboard/config/: config.toml  secrets.toml
model-dashboard/docs/: README.md  architecture.md  authentication.md  changelog.md  configuration.md  deployment.md  rest-api.md
model-dashboard/k8s/: configmap.yaml  create-user-job.yaml  deploy.sh  deployment.yaml  init-data-job.yaml  minio.yaml  namespace.yaml  pvc.yaml  secret.yaml
model-dashboard/scripts/: init_minio_data.py  manage_users.py
model-dashboard/src/: README.md  pyproject.toml
model-dashboard/src/model_dashboard/: __init__.py  api.py  app.py  auth.py  connection.py  models.py  utils.py
model-dashboard/src/model_dashboard/pages/: create.py  models.py  tokens.py  upload.py  user.py
