[project]
name = "model-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "John Wood", email = "jwwood@mdanderson.org" }
]
requires-python = ">=3.10"
dependencies = [
    "minio",
    "pandas",
    "pydantic",
    "streamlit==1.45.0",
    "streamlit-cookies-controller",
    "streamlit-oauth"
]

[project.scripts]
model-dashboard = "model_dashboard:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
