[project]
name = "model-dashboard"
version = "2.0.0"
description = "Inference Model Management Dashboard with LDAP authentication and REST API"
readme = "README.md"
authors = [
    
]
requires-python = ">=3.10"
dependencies = [
    # Core dependencies
    "minio",
    "pandas",
    "pydantic",
    "streamlit>=1.40.0",
    "streamlit-cookies-controller",
    
    # Authentication
    "ldap3",
    
    # REST API
    "fastapi",
    "uvicorn[standard]",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "httpx",
]

[project.scripts]
model-dashboard = "model_dashboard:main"
model-api = "model_dashboard:run_api"
model-dashboard-all = "model_dashboard:run_both"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
